# Nodepat

./: .gitignore  Cargo.toml  README.md  install-desktop.sh  install-linux.sh  install-windows.ps1  nodepat.desktop  uninstall-linux.sh  uninstall-windows.ps1
.github/workflows/: Release.yml  Rust.yml  ci.yml  release.yml
src/: app.rs  config.rs  dialogs.rs  editor.rs  file_ops.rs  format.rs  main.rs  menu.rs  search.rs  status_bar.rs
src/ui/: dialogs.rs  file_browser.rs  mod.rs  status_bar.rs
