[package]
name = "Nodepat"
version = "0.1.3"
edition = "2024"
authors = ["Firstpick"]
description = "A minimalistic text editor built with Rust and egui. Cross-platform and lightweight."

[dependencies]
eframe = { version = "0.33.2", features = ["wayland"] }
egui = "0.33.2"

[dev-dependencies]

[lints.clippy]
cognitive_complexity = "warn"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

